@@ -125,6 +125,7 @@ msg_sequence_test:
 	./06-bridge-reconnect-local-out.py
 
 07 :
+	./07-will-control.py
 	./07-will-delay-invalid-573191.py
 	./07-will-delay-reconnect.py
 	./07-will-delay-recover.py
